<resources>
    <string name="app_name">Android_Expense</string>
    <string name="action_settings">Settings</string>
    <color name="color">#AAAEEE</color>
    <color name="color2">#EEEAAA</color>
    <color name="DARK_BLUE">#123AAA</color>


    <!--List text -->
    <string name="All">Alla</string>
    <string name="Cost">Kostnad</string>
    <string name="Type">Typ</string>
    <string name="Date">Datum</string>
    <string name="Comment">Kommentar</string>
    <string name="Remove">Ta bort</string>
    <string name="Expense">Utgift</string>
    <string name="Income">Inkomst</string>

    <!-- Dropdown -->
    <string name="Paycheck">Lön</string>
    <string name="Debt">Skuld</string>

    <string name="Food">Mat</string>
    <string name="Food_out">Mat ute</string>
    <string name="Bills">Räkning</string>
    <string name="Travel">Resa</string>
    <string name="Other">Övrigt</string>

    <!-- Header text -->
    <string name="AddExpenseHeader">Lägg till utgift(?)</string>
    <string name="SortType">Sortera</string>
    <string name="showType">Visa</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="periodShown_month">Månaden: </string>

    <string name="title_activity_settings">Settings</string>


    <!--- Currency -->
    <string name="Currency_kr">Kr</string>


    <!-- Button text -->
    <string name="BackButton">Tillbaka</string>


    <!--Month text -->
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">Maj</string>
    <string name="Jun">Juni</string>
    <string name="Jul">Juli</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Okt</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>


    <!-- -->
    <string name="popup_one_header">Visar: </string>
    <!-- Strings related to Settings -->























    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="set_server_ip">Set ip address of server</string>
    <string name="default_ip_address">192.168.1.3</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
