<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:weightSum="1" android:layout_marginRight="30dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="match_parent" android:gravity="left" android:weightSum="0.8">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:textSize="@dimen/defaultTextSize"
                    android:text="@string/Cost"
                    android:textColor="@color/White"
                    android:id="@+id/tv_lv_cost"/>

            <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/Date"
                          android:textSize="@dimen/defaultTextSize"
                          android:layout_marginLeft="10sp"
                      android:textColor="@color/White"
                          android:id="@+id/tv_lv_date"/>
                        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="@string/Comment"
                    android:textSize="@dimen/defaultTextSize"
                    android:textColor="@color/White"
                    android:id="@+id/tv_lv_comment"/>
<!--            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="@string/Type"
                    android:textSize="@dimen/defaultTextSize"
                    android:textColor="@color/White"
                    android:id="@+id/tv_lv_costType"/>-->
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout" android:weightSum="0.2" android:gravity="right" android:paddingRight="10dp">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/cb_remove"
                    android:scaleX="1.6"
                    android:scaleY="1.6"/>
            <!---->
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
