<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragment_one"
                tools:context="activities.PresentExpensesActivity">

    <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="@string/periodShown_month"-->
            <!--android:id="@+id/tv_l_periodShown"-->
            <!--android:layout_marginLeft="50dp"-->
            <!--android:layout_marginStart="50dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>-->

    <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:id="@+id/tv_l_monthShown" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/tv_l_periodShown" android:layout_toEndOf="@+id/tv_l_periodShown"-->
            <!--android:layout_marginLeft="20dp" android:layout_marginStart="21dp"/>-->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/periodShown_month"
            android:id="@+id/tv_l_periodShown"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

    <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:id="@+id/sp_SelectMonth"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toRightOf="@+id/tv_l_periodShown"-->
            <!--android:layout_toEndOf="@+id/tv_l_periodShown"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginStart="21dp"/>-->

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_SelectMonth"
            android:textSize="@dimen/defaultFontSize"
            android:layout_toRightOf="@+id/tv_l_periodShown"
            android:layout_toEndOf="@+id/tv_l_periodShown"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:paddingLeft="10dp">

        <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_textFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Food"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/tv_one_foodCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_textFoodOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Food_out"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/tv_one_foodOutCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_textBills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Bills"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/tv_one_billCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_textTravel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Travel"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/tv_one_travelCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_textOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Other"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/tv_one_otherCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
